[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.1.0"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 3.*",
    "oomtm @ git+https://github.com/mtm-aarhus/oomtm.git@main",
    "requests >= 2.31",
]
# oomtm provides the SharePoint upload/delete. The file is already redacted by a
# human in an external program, so there is no PDF/OCR work in this robot — it
# just swaps the SharePoint file for the uploaded one.

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
